Change log for zeit.web
=======================

2.87 (unreleased)
-----------------

- FIX: Actually add user id to webtrekk noscript

- FIX: Handle non-ascii URLs in remove_get_params

- BUG-430: Report embedded header asset to webtrekk


2.86 (2016-06-09)
-----------------

- ZON-3135: Implement Embed Article Header Object

- ZON-2039: Add series banner for articles

- ZON-3092: Add preconnect links

- ZON-2818: Introduce login-state-footer ESI,
  containing webtrekk-noscript with user information

- FIX: Align ZON video stage logo

- FIX: Naming things (Zeit.isWrapped)

- FIX: Enable wrapper support for framebuilder


2.85 (2016-06-08)
-----------------

- ZON-1934: polishing Schlagzeilenseite

- BUG-423: Add AdController keyword 'diuqilon' for tablet in portrait mode only

- BUG-422: Fix margin of adplace 7 on centerpages

- BUG-362: Prevent reloading hell on overscrolling

- BUG-410: Report if config loading in adReload failed

- FIX: Underline links inside ZMO articles

- FIX: Fix clicktracking label for whatsapp sharing link

- FIX: Remove "no-js" class from minimal framebuilder (freed of modernizr)

- FIX: Provide fallback date and hide copyright on Storystreams

- FIX: Escape double quotes in CeleraOne script function arguments

- FIX: Constrain footer inline script to minimal framebuilder

- FIX: Set "platform" webtrekk parameter (cp25) for facebook instant articles

- FIX: Fix framebuilder ressort and keywords

- FIX: Use cinema variant for storystream header

- MAINT: Have LazyProxy resolve product_id string to product object

- MAINT: Remove support for ZMO product galleries (they were never used)

- MAINT: Use correct webtrekk version number in noscript tag

- MAINT: Add meetrics to framebuilder


2.84 (2016-05-30)
-----------------

- ZON-2638: Introduce minimal version of ZON framebuilder

- ZON-2532: Determine milestone layout from tldr_milestone setting on teasered article

- ZON-3046: Use update signals on desktop only
