@@ -4,6 +4,7 @@ import zeit.content.cp.interfaces
 import zeit.campus.interfaces
 
 import zeit.web.core.module.teaser
+import zeit.web.site.module.teaser
 
 
 @grokcore.component.adapter(
@@ -16,3 +17,10 @@ class ZCOTeaserBlock(zeit.web.core.module.teaser.LayoutOverrideTeaserBlock):
         if self.xml.get('module') == 'zon-square':
             self.override_layout_id = 'zco-square'
         return super(ZCOTeaserBlock, self).layout
+
+
+@grokcore.component.adapter(
+    zeit.content.cp.interfaces.ITeaserBlock,
+    zeit.campus.interfaces.IZCOInfobox)
+class ZCOInfoboxTeaserBlock(zeit.web.site.module.teaser.InfoboxTeaserBlock):
+    pass
